<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">ABOUT</string>
    <string name="abouttext1">"Pondicherry Engineering College (PEC) is an Institution sponsored by the Union Territory of Pondicherry, India. The College was started in 1984 under the VII Five Year Plan. It is an autonomous Institution for the purposes of administration, staff recruitment and College development and is managed by a Board of Governors. The College is affiliated to Pondicherry University, Pondicherry, for the academic purposes. The College has been growing from strength to strength since its inception."</string>
    <string name="abouttext2">"The College campus is situated at Pillaichavady which is about 12 km from the Railway station and bus-stand in Pondicherry town. It is about 160 km south of Chennai (Madras) on the shores of Bay of Bengal. The campus is also well connected by town buses from Pondicherry. Buses ply between Chennai (Madras) and Pondicherry frequently and the duration of journey is about 3 to 4 hours. The buses that come from Chennai via East Coast Road (ECR) stop near the campus itself. Commutation by auto-rickshaws from Pondicherry city would cost around Rs. 75."</string>
    <string name="abouttext3">"The temperatures during the year vary between 25*C to 35*C, but it is always less harsher than other coastal cities making the place very pleasant and congenial for professional education. The campus is of great scenic beauty and forms an excellent setting for the pursuit of studies in engineering and technology."</string>
    <string name="abouttext4">"The well planned departmental buildings, library, hostels, students' amenities centre, open air theatre, residential quarters for staff with neatly laid out roads, lawns and gardens constitute the PEC campus which is about 210 acres.
"</string>
    <string name="right_nav">Rightnavigation</string>
    <string name="pec">PEC</string>
    <string name="civiltext1">"The Department of Civil Engineering was established during the inception of the college. Apart from offering B.Tech in Civil Engineering, two M.Tech programmes in Advanced Construction Technology and Environmental Engineering specialization and PhD  programme in Civil Engineering are offered. The major strength of this department is its faculty. Highly qualified, experienced and committed faculty members significantly contribute to the growth of the college in general and this department in particular. Students are offered world class training both in theory and practice. Industrial training is part of the curriculum both for UG and PG Students.

"</string>
    <string name="alicante_texto_1">"Alicante (Spanish: [ali'kante]), or Alacant (Valencian: [ala'kant]), both official names, is a city and port in Spain on the Costa Blanca, the capital of the province of Alicante and of the comarca of Alacantí, in the south of the Valencian Community. It is also a historic Mediterranean port. The population of the city of Alicante proper was 334,329, estimated as of 2011, ranking as the second-largest Valencian city.[1] Including nearby municipalities, the Alicante conurbation had 462,281 residents.[2] The population of the metropolitan area (including Elche and satellite towns) was 771,061 as of 2011 estimates, ranking as the eighth-largest metropolitan area of Spain.[3]"</string>
    <string name="alicante_texto_2">"Amongst the most notable features of the city are the Castle of Santa Bárbara, which sits high above the city, and the port of Alicante. The latter was the subject of bitter controversy in 2006–2007 as residents battled, successfully, to keep it from being changed into an industrial estate."</string>
    <string name="alicante_texto_3">"The Santa Bárbara castle is situated on Mount Benacantil, overlooking the city. The tower (La Torreta) at the top, is the oldest part of the castle, while part of the lowest zone and the walls were constructed later in the 18th century."</string>
    <string name="alicante_texto_4">"The promenade Explanada de España, lined by palm trees, is paved with 6.5 million marble floor tiles creating a wavy form and is one of the most lovely promenades in Spain. The Promenade extends from the Port of Alicante to the Gran Vía and ends at the famous statue of Mark Hersch. For the people of Alicante, the promenade is the meeting place for the traditional Spanish paseo, or stroll along the waterfront in the evenings, and a venue for outdoor musical concerts. At the end of the promenade is a monument by the artist Bañuls of the 19th century."</string>
    <string name="alicante_text_0">"Alicante"</string>
    <string name="barcelona_text_0">"Barcelona"</string>
    <string name="alicante_explanada">"Explanada"</string>
    <string name="barcelona_texto_1">"Barcelona (English /bɑrsə'loʊnə/, Catalan: [bərsə'ɫonə], Spanish: [barθe'lona]) is the capital city of the autonomous community of Catalonia in Spain and the country's 2nd largest city, with a population of 1.6 million[1] within its administrative limits. Its urban area extends beyond the administrative city limits with a population of around 4.5 million people, being the sixth-most populous urban area in the European Union after Paris, London, Madrid, the Ruhr area and Milan. About five million[2][3][4][5][6] people live in the Barcelona metropolitan area."</string>
    <string name="barcelona_texto_2">"Of Barcelona's parks, Montjuïc is the largest, with 203 ha located on the mountain of the same name.[42] It is followed by Parc de la Ciutadella (which occupies the site of the old military citadel and which houses the Parliament building, the Barcelona Zoo and several museums); 31 ha or 76.6 acres including the zoo), the Guinardó Park (19 ha or 47.0 acres), Park Güell (designed by Antoni Gaudí; 17.2 ha or 42.5 acres), Oreneta Castle Park (also 17.2 ha or 42.5 acres), Diagonal Mar Park (13.3 ha or 32.9 acres, inaugurated in 2002), Nou Barris Central Park (13.2 ha or 32.6 acres), Can Dragó Sports Park and Poblenou Park (both 11.9 ha or 29.4 acres), the Labyrinth Park (9.10 ha or 22.5 acres), named after the garden maze it contains.[42]"</string>
    <string name="barcelona_texto_3">"Barcelona has a great number of museums, which cover different areas and eras. The National Museum of Art of Catalonia possesses a well-known collection of Romanesque art while the Barcelona Museum of Contemporary Art focuses on post-1945 Catalan and Spanish art. The Fundació Joan Miró, Picasso Museum and Fundació Antoni Tàpies hold important collections of these world-renowned artists."</string>
    <string name="barcelona_texto_4">"At the very top of the monument stands a 7.2 m (24 ft) tall bronze statue atop a 40 m (131 ft) tall Corinthian column. The statue was sculpted by Rafael Atché and is said to depict Columbus pointing towards the New World with his right hand, while holding a scroll in the left. It is a commonly held belief that instead of pointing to the west towards the New World, the statue points east towards Columbus's supposed home city of Genoa."</string>
    <string name="barcelona_guell">Parc Güell</string>
    <string name="about_text_2"><![CDATA[This is a demo app of a library.<br/>Developed by:<br/><a href=\'http://www.fmsirvent.com\'>fmSirvent</a><br/>You can see more info at:<br/><a href=\'https://github.com/Narfss/ParallaxEverywhere\'>https://github.com/Narfss/ParallaxEverywhere</a>]]></string>
    <string name="title_activity_dept">dept</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_depttab">depttab</string>

</resources>
