<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pew="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParallaxDemo$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.rohitmapakshi.myapplication.PEWImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/alicante_explanada"
                pew:reverse="reverseBoth"/>

            <com.example.rohitmapakshi.myapplication.PEWTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/alicante_text_0"
                android:textColor="@android:color/white"
                android:textSize="70sp"
                pew:block_parallax_x="true"
                pew:parallax_x="160dp"
                pew:parallax_y="160dp"
                pew:reverse="reverseX"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/alicante_texto_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <com.example.rohitmapakshi.myapplication.PEWImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sam1"
                    pew:parallax_x="160dp"
                    pew:parallax_y="160dp"
                    pew:reverse="reverseBoth"/>

                <com.example.rohitmapakshi.myapplication.PEWTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/alicante_explanada"
                    android:textColor="@android:color/white"
                    pew:block_parallax_x="true"
                    pew:parallax_x="160dp"
                    pew:parallax_y="160dp"
                    pew:reverse="reverseY" />

            </FrameLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/alicante_texto_2" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/alicante_texto_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/alicante_texto_4" />


            <com.example.rohitmapakshi.myapplication.PEWTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:scaleType="centerCrop"
                android:src="@drawable/alicante_luceros"
                pew:reverse="reverseY" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
