<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pew="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.example.rohitmapakshi.myapplication.PEWImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/alicante_santa_barbara"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            pew:parallax_x="160dp"
            pew:parallax_y="160dp"
            pew:reverse="reverseBoth"
            />
        <com.example.rohitmapakshi.myapplication.PEWTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="afjfalfjljjafllf"
            android:gravity="bottom|center_horizontal"
            android:textColor="@color/colorAccent"
            android:textSize="30dp"
            pew:parallax_x="160dp"
            pew:parallax_y="160dp"
            pew:reverse="reverseX"
            android:id="@+id/depst1"/>
        </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/about_text_2"
        android:id="@+id/depttv"
        />
        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:layout_below="@id/depttv">
      <com.example.rohitmapakshi.myapplication.PEWImageView
          android:layout_width="100sp"
          android:layout_height="200dp"
          android:layout_below="@id/depttv"
          android:src="@drawable/sam1"
          android:scaleType="centerCrop"
          pew:parallax_x="260dp"
          pew:parallax_y="260dp"
          pew:reverse="reverseBoth"/>
       <com.example.rohitmapakshi.myapplication.PEWTextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/app_name"
           android:gravity="bottom|center_horizontal"
           android:textColor="@color/Black"
           pew:parallax_x="50dp"
           pew:parallax_y="50dp"
           pew:reverse="reverseY"/>
        </FrameLayout>

</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_text_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/alicante_texto_1"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>